--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,6 @@ services:
     hostname: "consul1"
     ports:
       - "8501:8500"
-    command: "agent"
     environment:
       CONSUL_AGENT_SERVER_ENABLED: true
       CONSUL_AGENT_SERVER_BOOTSTRAP_EXPECT: 3
@@ -16,7 +15,6 @@ services:
   consul2:
     image: consul:latest
     hostname: "consul2"
-    command: "agent"
     ports:
       - "8502:8500"
     environment:
@@ -30,7 +28,6 @@ services:
   consul3:
     image: consul:latest
     hostname: "consul3"
-    command: "agent"
     ports:
       - "8503:8500"
     environment:
@@ -44,32 +41,36 @@ services:
   consul-agent1:
     image: consul:latest
     hostname: "consul-agent1"
-    command: "agent -retry-join consul1"
     ports:
       - "8511:8500"
+    environment:
+      CONSUL_AGENT_RETRY_JOIN: consul1
     depends_on:
       - consul1
   consul-agent2:
     image: consul:latest
     hostname: "consul-agent2"
-    command: "agent -retry-join consul1"
     ports:
       - "8512:8500"
+    environment:
+      CONSUL_AGENT_RETRY_JOIN: consul1
     depends_on:
       - consul1
   consul-agent3:
     image: consul:latest
     hostname: "consul-agent3"
-    command: "agent -retry-join consul1"
     ports:
       - "8513:8500"
+    environment:
+      CONSUL_AGENT_RETRY_JOIN: consul1
     depends_on:
       - consul1
   consul-agent4:
     image: consul:latest
     hostname: "consul-agent4"
-    command: "agent -retry-join consul1"
     ports:
       - "8514:8500"
+    environment:
+      CONSUL_AGENT_RETRY_JOIN: consul1
     depends_on:
       - consul1
